@@ -757,6 +757,10 @@ Other Changes
   an error message prompting the user to be explicit about which of multiple nodes
   to stop using the -p or -all options (Timothy Potter)
 
+* SOLR-7020: 'bin/solr start' should automatically use an SSL-enabled alternate jetty
+  configuration file when in SSL mode, eliminating the need for manual jetty.xml edits.
+ 
+
 ==================  4.10.3 ==================
 
 Bug Fixes
